tests/snapshots/long_para_segment_01.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  Word: "this"
  WhiteSpace: " "
  Word: "is"
  WhiteSpace: " "
  Word: "a"
  WhiteSpace: " "
  Bold
    Asterisk: "*"
    TextChunk
      Word: "bold"
    Asterisk: "*"
  WhiteSpace: " "
  Italics
    Slash: "/"
    TextChunk
      Word: "italic"
    Slash: "/"
  WhiteSpace: " "
  UnderLine
    Underscore: "_"
    TextChunk
      Word: "underline"
    Underscore: "_"
  WhiteSpace: "   "
  StrikeThrough
    Hyphen: "-"
    TextChunk
      Word: "strike"
    Hyphen: "-"
    TextChunk
      Word: "through"
    Hyphen: "-"
  WhiteSpace: " "
  Spoiler
    Exclamation: "!"
    TextChunk
      Word: "spoiler"
    Exclamation: "!"
  WhiteSpace: " "
  Superscript
    Caret: "^"
    TextChunk
      Word: "superscript"
    Caret: "^"
  WhiteSpace: " "
  Subscript
    Comma: ","
    TextChunk
      Word: "subscript"
    Comma: ","
  WhiteSpace: " "
  InlineCode
    Backtick: "`"
    TextChunk
      Word: "inline"
      WhiteSpace: " "
      Word: "code"
    Backtick: "`"
  WhiteSpace: " "
  NullModifier
    Percent: "%"
    TextChunk
      Word: "null"
      WhiteSpace: " "
      Word: "modifier"
    Percent: "%"
  WhiteSpace: " "
  Variable
    Ampersand: "&"
    TextChunk
      Word: "variable"
    Ampersand: "&"
  WhiteSpace: " "
