tests/snapshots/para_segment_01.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  Word: "this"
  WhiteSpace: " "
  Word: "is"
  WhiteSpace: " "
  Verbatim
    Pipe: "|"
    TextChunk
      Word: "a"
      WhiteSpace: " "
      Word: "verbatim"
      WhiteSpace: " "
      Word: "text"
      WhiteSpace: " "
      Word: "chunk"
    Pipe: "|"
