tests/snapshots/para_segment_01_err.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  Word: "this"
  WhiteSpace: " "
  Word: "is"
  WhiteSpace: " "
  Verbatim
    Error: "|" (unclosed delimiter)
    TextChunk
      Word: "a"
      WhiteSpace: " "
      Word: "verbatim"
      WhiteSpace: " "
      Word: "text"
      WhiteSpace: " "
      Word: "chunk"
