tests/snapshots/para_segment_02_err.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  Word: "this"
  WhiteSpace: " "
  Word: "is"
  WhiteSpace: " "
  Verbatim
    Pipe: "|"
    TextChunk
      Word: "a"
      WhiteSpace: " "
      Word: "verbatim"
      WhiteSpace: " "
      Word: "text"
      WhiteSpace: " "
      Word: "chunk"
    Pipe: "|"
  LineEnding: "\n"
