tests/snapshots/para_segment_03_err.snap
---
source: src/parser.rs
expression: output
---
ParaSegment
  Word: "this"
  WhiteSpace: " "
  Word: "isrbatim"
  WhiteSpace: " "
  Word: "text"
  WhiteSpace: " "
  Word: "chunk"
  LineEnding: "\n"
