tests/snapshots/parabreak_02.snap
---
source: src/parser.rs
expression: output
---
Paragraph
  ParaSegment
    WhiteSpace: " "
    Word: "I"
    WhiteSpace: " "
    Word: "am"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
    Word: "paragraph"
    WhiteSpace: " "
    Word: "segment"
    Dot: "."
    LineEnding: "\n"
  ParaSegment
    Word: "I"
    WhiteSpace: " "
    Word: "am"
    WhiteSpace: " "
    Word: "another"
    WhiteSpace: " "
    Word: "paragraph"
    WhiteSpace: " "
    Word: "segment"
    Dot: "."
    LineEnding: "\n"
  ParaBreak
    WhiteSpace: "      "
    LineEnding: "\n"
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Verbatim
      Pipe: "|"
      TextChunk
        Word: "is"
        WhiteSpace: " "
        Word: "verbatim"
      Pipe: "|"
    WhiteSpace: " "
    Word: "content"
    WhiteSpace: " "
    Bold
      Error: "*" (unclosed delimiter)
      TextChunk
        Word: "this"
        WhiteSpace: " "
        Word: "is"
        WhiteSpace: " "
        Word: "bold"
      Bold
        Error: "*" (unclosed delimiter)
        TextChunk
          Error: "\n" (unexpected LineEnding)
          WhiteSpace: "    "
          Word: "Together"
          WhiteSpace: " "
          Word: "we"
          WhiteSpace: " "
          Word: "form"
          WhiteSpace: " "
          Word: "a"
          WhiteSpace: " "
          Word: "paragraph"
          Dot: "."
