tests/snapshots/paragraph_01.snap
---
source: src/parser.rs
expression: output
---
Paragraph
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Word: "isrbatim"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    LineEnding: "\n"
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "next"
