tests/snapshots/paragraph_with_verbatim_01.snap
---
source: src/parser.rs
expression: output
---
Paragraph
  ParaSegment
    Word: "I"
    WhiteSpace: " "
    Word: "am"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
    Word: "paragraph"
    WhiteSpace: " "
    Word: "segment"
    Dot: "."
    LineEnding: "\n"
  ParaSegment
    Word: "I"
    WhiteSpace: " "
    Word: "am"
    WhiteSpace: " "
    Word: "another"
    WhiteSpace: " "
    Word: "paragraph"
    WhiteSpace: " "
    Word: "segment"
    Dot: "."
    LineEnding: "\n"
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Verbatim
      Pipe: "|"
      TextChunk
        Word: "is"
        WhiteSpace: " "
        Word: "verbatim"
      Pipe: "|"
    WhiteSpace: " "
    Word: "content"
    LineEnding: "\n"
  ParaSegment
    WhiteSpace: "    "
    Word: "Together"
    WhiteSpace: " "
    Word: "we"
    WhiteSpace: " "
    Word: "form"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
    Word: "paragraph"
    Dot: "."
